cmake_minimum_required(VERSION 3.16)
project(c_primer_plus C)

set(CMAKE_C_STANDARD 11)

add_executable(c_primer_plus
        Chapter2-Introducing-C/Ex2-1.c
        Chapter2-Introducing-C/Ex2-2.c
        Chapter2-Introducing-C/Ex2-3.c
        Chapter2-Introducing-C/Ex2-4.c
        Chapter2-Introducing-C/Ex2-5.c
        Chapter2-Introducing-C/Ex2-6.c
        Chapter2-Introducing-C/Ex2-7.c
        Chapter2-Introducing-C/Ex2-8.c
        Chapter3-Data-and-C/Ex3-1.c
        Chapter3-Data-and-C/Ex3-2.c
        Chapter3-Data-and-C/Ex3-3.c
        Chapter3-Data-and-C/Ex3-4.c
        Chapter3-Data-and-C/Ex3-5.c
        Chapter3-Data-and-C/Ex3-6.c
        Chapter3-Data-and-C/Ex3-7.c
        Chapter3-Data-and-C/Ex3-8.c
        Chapter4-Character-Strings-and-Formatted-Input-and-Output/Ex4-1.c
        Chapter4-Character-Strings-and-Formatted-Input-and-Output/Ex4-2.c
        Chapter4-Character-Strings-and-Formatted-Input-and-Output/Ex4-3.c
        Chapter4-Character-Strings-and-Formatted-Input-and-Output/Ex4-4.c
        Chapter4-Character-Strings-and-Formatted-Input-and-Output/Ex4-5.c
        Chapter4-Character-Strings-and-Formatted-Input-and-Output/Ex4-6.c
        Chapter4-Character-Strings-and-Formatted-Input-and-Output/Ex4-7.c
        Chapter4-Character-Strings-and-Formatted-Input-and-Output/Ex4-8.c
        Chapter5-Operators-Expressions-and-Statements/Ex5-1.c
        Chapter5-Operators-Expressions-and-Statements/Ex5-2.c
        Chapter5-Operators-Expressions-and-Statements/Ex5-3.c
        Chapter5-Operators-Expressions-and-Statements/Ex5-4.c
        Chapter5-Operators-Expressions-and-Statements/Ex5-5.c
        Chapter5-Operators-Expressions-and-Statements/Ex5-6.c
        Chapter5-Operators-Expressions-and-Statements/Ex5-7.c
        Chapter5-Operators-Expressions-and-Statements/Ex5-8.c
        Chapter5-Operators-Expressions-and-Statements/Ex5-9.c
        Chapter6-Control-Statements-Looping/Ex6-1.c
        Chapter6-Control-Statements-Looping/Ex6-10.c
        Chapter6-Control-Statements-Looping/Ex6-11.c
        Chapter6-Control-Statements-Looping/Ex6-12.c
        Chapter6-Control-Statements-Looping/Ex6-13.c
        Chapter6-Control-Statements-Looping/Ex6-14.c
        Chapter6-Control-Statements-Looping/Ex6-15.c
        Chapter6-Control-Statements-Looping/Ex6-16.c
        Chapter6-Control-Statements-Looping/Ex6-17.c
        Chapter6-Control-Statements-Looping/Ex6-18.c
        Chapter6-Control-Statements-Looping/Ex6-2.c
        Chapter6-Control-Statements-Looping/Ex6-3.c
        Chapter6-Control-Statements-Looping/Ex6-4.c
        Chapter6-Control-Statements-Looping/Ex6-5.c
        Chapter6-Control-Statements-Looping/Ex6-6.c
        Chapter6-Control-Statements-Looping/Ex6-7.c
        Chapter6-Control-Statements-Looping/Ex6-8.c
        Chapter6-Control-Statements-Looping/Ex6-9.c
        Chapter7-Control-Statements-Branching-Jumps/Ex7-1.c
        Chapter7-Control-Statements-Branching-Jumps/Ex7-10.c
        Chapter7-Control-Statements-Branching-Jumps/Ex7-11.c
        Chapter7-Control-Statements-Branching-Jumps/Ex7-2.c
        Chapter7-Control-Statements-Branching-Jumps/Ex7-3.c
        Chapter7-Control-Statements-Branching-Jumps/Ex7-4.c
        Chapter7-Control-Statements-Branching-Jumps/Ex7-5.c
        Chapter7-Control-Statements-Branching-Jumps/Ex7-6.c
        Chapter7-Control-Statements-Branching-Jumps/Ex7-7.c
        Chapter7-Control-Statements-Branching-Jumps/Ex7-8.c
        Chapter7-Control-Statements-Branching-Jumps/Ex7-9.c
        Chapter8-Character-IO-and-Input-Validation/a.c
        Chapter8-Character-IO-and-Input-Validation/Ex8-1.c
        Chapter8-Character-IO-and-Input-Validation/Ex8-2.c
        Chapter8-Character-IO-and-Input-Validation/Ex8-3.c
        Chapter8-Character-IO-and-Input-Validation/Ex8-4.c
        Chapter8-Character-IO-and-Input-Validation/Ex8-5.c
        Chapter8-Character-IO-and-Input-Validation/Ex8-6.c
        Chapter8-Character-IO-and-Input-Validation/Ex8-7.c
        Chapter8-Character-IO-and-Input-Validation/Ex8-8.c
        Chapter9-Functions/Ex9-1.c
        Chapter9-Functions/Ex9-2.c
        Chapter9-Functions/Ex9-3.c
        Chapter9-Functions/Ex9-4.c
        Chapter9-Functions/Ex9-5.c
        Chapter9-Functions/Ex9-6.c)
